--- a/media.css
+++ b/media.css
@@ -1,5 +1,8 @@
-@media screen and (min-width: 600px){
+@media screen and (min-width: 700px){
     body{
         background-image: url(assets/images/background-pattern-desktop.svg);
+    }
+    #conteiner{
+        width: 500px;
     }
 }
