--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     padding-top: 1px;
     padding-bottom: 5px;
     margin-top: 10em;
+    box-shadow: 0px 2px 10px 2px  rgba(0, 0, 0, 0.116);
 
 } 
 h1 > img{
